Revision history for CHI-Driver-BerkeleyDB

** denotes an incompatible change

{{$NEXT}}

0.04  2018-06-13
    - New Maintainer: Michael Schout <mschout@cpan.org>
    - Fix hidden dependency on Moose

0.03  2010-06-19
    - Eliminate unnecessary use of non-dependency File::Slurp

0.02  2010-06-14
   ** Just use BerkeleyDB instead of BerkeleyDB::Manager - some people were having trouble
      installing BerkeleyDB::Manager and/or seeing extremely bad write performance

0.01  2009-06-23
    - Initial version
