@@ -3,6 +3,7 @@ Revision history for CHI-Driver-BerkeleyDB
 ** denotes an incompatible change
 
 {{$NEXT}}
+    - Replace Moose with Moo, which CHI already requires.
 
 0.04  2018-06-13
     - New Maintainer: Michael Schout <mschout@cpan.org>
